--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 .grid {
     display: grid;
-    grid-template: 0.40fr 2fr 0.35fr / 1fr;
+    grid-template: 0.30fr 0.55fr 3fr  / 1fr;
 }
 
 .logo {
@@ -16,9 +16,10 @@
   display: flex;
   font-weight: 300;
   justify-content: left;
+  font-size: max(16px,min(2.5vw,48px));
 }
 
-.logo h1 {
+.logo {
   margin: 0;
   font-weight: 400;
 }
@@ -32,7 +33,6 @@
   font-size: 40px;
   font-weight: 600;
   font-style: italic;
-  font-family: cursive;
 }
 
 .menu {
@@ -47,10 +47,15 @@
   line-height: 1.40;
   display: inline-block;
   margin-right: 0px;
+  font-size: max(16px,min(2.5vw,48px));
+}
+
+.mail {
+  margin-right: 0.5%;
 }
 
 .info {
-  grid-area: 2 / 1 / 2 / 1;
+  grid-area: 3 / 1 / 3 / 1;
   display: grid;
 }
 
@@ -85,8 +90,16 @@ a:visited {
 
 a:hover {
   color: red;
+  transition: color 0.2s linear 0.1s;
 }
 
 @media only screen and (min-resolution: 150dpi) {
   /* CSS for high resolution screens */
+}
+
+@media only screen and (max-width: 370px) {
+  .menu {
+    display: grid;
+    justify-items: right;
+  }
 }
