--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 0.4px;
-    line-height: 1.30;
+    line-height: 1.25;
     box-sizing: border-box;
-    font-weight: 315;
+    font-weight: 300;
    }
 
 .grid {
     display: grid;
-    grid-template: 0.30fr 0.55fr 3fr  / 1fr;
+    grid-template: 1fr 1fr 1fr 1fr;
 }
 
 .logo {
@@ -16,38 +16,56 @@
   display: flex;
   font-weight: 300;
   justify-content: left;
-  font-size: max(16px,min(2.5vw,48px));
+  font-size: max(16px,min(2.5vw,35px));
 }
 
-.logo {
-  margin: 0;
-  font-weight: 400;
+.info {
+  font-weight: 200;
 }
 
-.aww {
-  margin: 0px;
-  font-weight: 400;
+.a {
+  font-weight: 300;
+  animation-name: italic;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
 }
 
-.aww:hover {
-  font-size: 40px;
-  font-weight: 600;
-  font-style: italic;
+.w {
+  visibility: hidden;
+  font-weight: 300;
+  animation-name: italic;
+  animation-duration: 3s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes italic {
+  from {
+    font-weight: 300;
+  }
+
+  to {
+    visibility: visible;
+    font-style: italic;
+    font-weight: 400;
+    color: pink;
+  }
+
 }
 
 .menu {
-  grid-area: 1 / 1 / 1 / 1;
-  font-weight: 300;
+  grid-area: 2 / 1 / 2 / 1;
   display: flex;
-  justify-content: right;
+  justify-content: left;
 }
 
 .menu li {
   list-style: none;
-  line-height: 1.40;
+  line-height: 1.25;
   display: inline-block;
   margin-right: 0px;
-  font-size: max(16px,min(2.5vw,48px));
+  font-size: max(16px,min(1.9vw,35px));
 }
 
 .mail {
@@ -59,24 +77,15 @@
   display: grid;
 }
 
-.info h1 {
-    font-size: max(18px,min(2.5vw,48px));
-    font-weight: 300;
-    margin-bottom: 0;
-}
 
 p, h1, li {
-  font-size: max(18px,min(1.9vw,48px));
+  font-size: max(18px,min(1.9vw,35px));
 }
-
-h1 {
-  font-weight: normal;
-}
-
 
 a:link {
   text-decoration: none;
   color: black;
+  font-weight: 200;
 }
 
 a:active {
